examples/exploit-example/klee-out-0/test000001.exec.err
Error: invalid function pointer
File: test.c
Line: 39
assembly.ll line: 662
Stack: 
	#000000662 in __user_main (argc=1, argv=73001088) at test.c:39
	#100000386 in __uClibc_main (main=96740360, argc=1, argv=73001088, app_init=0, app_fini=0, rtld_fini=0, stack_end=0) at libc/misc/internals/__uClibc_main.c:401
	#200000561 in main (=1, =73001088)
